fix main/footer spacing

--- a/css/_src/screen.scss
+++ b/css/_src/screen.scss
@@ -951,6 +951,7 @@ ol {
 
   #main-wrapper {
     padding: 4em 0 0 0;
+    margin-bottom: 2em;
   }
 
   /* Header */
